--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,9 @@ requires-python = ">=3.9"
 dev = [
     "pytest>=7.0.0",
 ]
-
+dependencies = [
+    "pandas>=2.0.0",
+]
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = "test_*.py"
